kubernetes/apps/storage/rustfs/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rustfs
spec:
  hostnames:
  - rustfs.timcasa.me
  parentRefs:
  - name: envoy-internal
    namespace: network
  rules:
  - backendRefs:
    - name: rustfs-svc
      port: 9001
